--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -34,8 +34,12 @@ body {
     font-size: 2.5em;
     font-weight: 800;
     color: #e50914;
-    margin-bottom: 40px;
-    
+    margin-bottom: 40px;  
+}
+.contact-number1 {
+    font-size: 2.5em;
+    font-weight: 800;
+    color: #e50914;    
 }
 .social-media {
     font-size: 1.2em;
