--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -36,7 +36,7 @@ body {
     color: #e50914;
     margin-bottom: 40px;  
 }
-.contact-number1 {
+.contact-number-one {
     font-size: 2.5em;
     font-weight: 800;
     color: #e50914;    
