--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -258,7 +258,7 @@
       height:150px;
       box-sizing: border-box;
       padding: 0 1rem;
-      background-color: #fff;
+      background-color: #000000;
       box-shadow: rgba(255, 255, 255, 0.3) 0 0 15px;
       position: sticky;
       top: 0 !important;
