--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -356,7 +356,7 @@
         height: 100%
     }
     #cs-navigation .cs-button-solid {
-      font-size: 2.2rem;
+      font-size: clamp(2rem, 2.2rem, 2.4rem);
       font-weight: 800;
       letter-spacing: -1px;
       line-height: clamp(0.875em, 0.9vw, 1.5em);
@@ -389,6 +389,11 @@
     @media only screen and (max-width: 87.5rem) {
     #cs-navigation .cs-ul {
       padding: 0 40px 0 0;
+      }
+    }
+        @media only screen and (max-width: 87.5rem) {
+    #cs-navigation .cs-ul {
+      padding: 0 80px 0 0;
       }
     }
     @media only screen and (max-width: 75rem) {
@@ -437,9 +442,7 @@
             font-size: 1.6rem !important;
             padding-top:30px;
         }
-        #cs-navigation .under-number {
-            font-size: 1.2rem !important;
-        }
+
         #cs-navigation .cs-button-solid {
             padding: 2rem 1.2rem;
       
