--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -448,6 +448,14 @@
       
     }
     }
+
+        @media only screen and (max-width: 64rem) {
+
+        #cs-navigation .cs-button-solid {
+         padding-top: 0px;
+      
+    }
+    }
     @media only screen and (max-width: 23.75rem) {
       #cs-navigation .cs-button-solid {
           font-size: 1.1rem !important;
