--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -752,7 +752,10 @@ footer {
     color:#b6b6b6;
     
 }
-
+@media (max-width: 500px) {
+    * {
+        overflow-x: clip;
+    }
 
 
 body .hero-section .question {
