--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -477,7 +477,7 @@
   list-style: none;
   margin: 0;
   padding: 0.6rem 0;
-  background: #fff;
+  background: #000000;
   display: none;
   opacity: 0;
   visibility: hidden;
