--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -4,7 +4,7 @@
     align-items: flex-start;
     gap: 100px;
     padding: 20px;
-    background-color: #000000;
+    background-color: #333;
     color: #fff;
 }
 
@@ -27,7 +27,7 @@ iframe {
 .quick-links h2 {
  
     font-size: 1.3em;
-    color: #fff;
+    color: #ff0000;
 }
 
 .quick-links ul {
