--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -25,27 +25,26 @@ iframe {
 
 .contact-us h2,
 .quick-links h2 {
- 
-    font-size: 1.3em;
+    font-size: clamp(1.1em, 1em + 0.3vw, 1.4em);
     color: #ff0000;
 }
 
 .quick-links ul {
     list-style: none;
     padding: 0;
-    font-size: 1em;
+    font-size: clamp(0.9em, 0.8em + 0.2vw, 1.1em);
 }
     
 
 .quick-links ul li {
     margin: 5px 0;
-    font-size: 1em;
+    font-size: clamp(0.9em, 0.8em + 0.2vw, 1.1em);
 }
 
 .quick-links ul li a {
     text-decoration: none;
     color: #fff;
-    font-size: 1em;
+    font-size: clamp(0.9em, 0.8em + 0.2vw, 1.1em);
 }
 
 .quick-links ul li a:hover {
